Update to work with the updated format of PowerJoular. Few other fixes to ring buffer and CSV. Drop HTTP endpoint. Remove external dependencies for HTTP and JNA so the agent is very light now